src/circheck/target/CircomParser.py
# Generated from circheck/parser/Circom.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CircomParser ( Parser ):

    grammarFileName = "Circom.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "';'", "'.'", "','", "'_'", "'?'", "':'", 
                     "'==='", "'<=='", "'<--'", "'==>'", "'-->'", "<INVALID>", 
                     "'!'", "'~'", "'**'", "'*'", "'/'", "'\\'", "'%'", 
                     "'+'", "'-'", "'<<'", "'>>'", "'&'", "'^'", "'|'", 
                     "'=='", "'!='", "'>'", "'<'", "'<='", "'>='", "'&&'", 
                     "'||'", "'='", "<INVALID>", "'signal'", "'input'", 
                     "'output'", "'public'", "'template'", "'component'", 
                     "'var'", "'function'", "'return'", "'if'", "'else'", 
                     "'for'", "'while'", "'do'", "'log'", "'assert'", "'include'", 
                     "'parallel'", "'pragma'", "'bus'", "'circom'", "'custom_templates'", 
                     "'custom'", "'main'" ]

    symbolicNames = [ "<INVALID>", "SIGNAL_TYPE", "LP", "RP", "LB", "RB", 
                      "LC", "RC", "SEMICOLON", "DOT", "COMMA", "UNDERSCORE", 
                      "TERNARY_CONDITION", "TERNARY_ALTERNATIVE", "EQ_CONSTRAINT", 
                      "LEFT_CONSTRAINT", "LEFT_ASSIGNMENT", "RIGHT_CONSTRAINT", 
                      "RIGHT_ASSIGNMENT", "SELF_OP", "NOT", "BNOT", "POW", 
                      "MUL", "DIV", "QUO", "MOD", "ADD", "SUB", "SHL", "SHR", 
                      "BAND", "BXOR", "BOR", "EQ", "NEQ", "GT", "LT", "LE", 
                      "GE", "AND", "OR", "ASSIGNMENT", "ASSIGNMENT_WITH_OP", 
                      "SIGNAL", "INPUT", "OUTPUT", "PUBLIC", "TEMPLATE", 
                      "COMPONENT", "VAR", "FUNCTION", "RETURN", "IF", "ELSE", 
                      "FOR", "WHILE", "DO", "LOG", "ASSERT", "INCLUDE", 
                      "PARALLEL", "PRAGMA", "BUS", "CIRCOM", "CUSTOM_TEMPLATES", 
                      "CUSTOM", "MAIN", "SINGLE_LINE_COMMENT", "MULTI_LINES_COMMENT", 
                      "STRING", "NUMBER", "HEXNUMBER", "IDENTIFIER", "WHITESPACE", 
                      "UnclosedComment" ]

    RULE_program = 0
    RULE_version = 1
    RULE_main_option = 2
    RULE_definition_block = 3
    RULE_definition_list = 4
    RULE_pragma_definition = 5
    RULE_custom_gate = 6
    RULE_include_list = 7
    RULE_include_definition = 8
    RULE_public_list = 9
    RULE_main_component = 10
    RULE_function_definition = 11
    RULE_template_definition = 12
    RULE_identifier_list_option = 13
    RULE_custom_option = 14
    RULE_parallel_option = 15
    RULE_block = 16
    RULE_statement = 17
    RULE_statement_list = 18
    RULE_declaration_statement = 19
    RULE_expression_statement = 20
    RULE_substitutions = 21
    RULE_substitutions_statement = 22
    RULE_if_statement = 23
    RULE_regular_statement = 24
    RULE_for_statement = 25
    RULE_while_statement = 26
    RULE_equal_constraint_statement = 27
    RULE_return_statement = 28
    RULE_assert_statement = 29
    RULE_log_statement = 30
    RULE_declaration = 31
    RULE_identifier_list = 32
    RULE_tag_list = 33
    RULE_tuple_initialization = 34
    RULE_simple_symbol = 35
    RULE_simple_symbol_list = 36
    RULE_complex_symbol = 37
    RULE_some_symbol = 38
    RULE_some_symbol_list = 39
    RULE_var_decl = 40
    RULE_signal_decl = 41
    RULE_signal_header = 42
    RULE_signal_symbol = 43
    RULE_signal_symbol_list = 44
    RULE_component_decl = 45
    RULE_var_access = 46
    RULE_var_access_list = 47
    RULE_array_access = 48
    RULE_array_access_list = 49
    RULE_component_access = 50
    RULE_variable = 51
    RULE_expression = 52
    RULE_expression1 = 53
    RULE_expression2 = 54
    RULE_expression3 = 55
    RULE_expression4 = 56
    RULE_expression5 = 57
    RULE_expression6 = 58
    RULE_expression7 = 59
    RULE_expression8 = 60
    RULE_expression9 = 61
    RULE_expression10 = 62
    RULE_expression11 = 63
    RULE_expression12 = 64
    RULE_expression13 = 65
    RULE_expression14 = 66
    RULE_twoElemsListable = 67
    RULE_log_arguement = 68
    RULE_log_list = 69
    RULE_listable = 70
    RULE_listable_prime = 71
    RULE_listableAnon = 72
    RULE_listableAnon_prime = 73
    RULE_listableWithInputNames = 74
    RULE_prefixOpcode = 75
    RULE_compareOpcode = 76
    RULE_shiftOpcode = 77
    RULE_add_sub_opcode = 78
    RULE_mul_div_opcode = 79
    RULE_assign_opcode = 80

    ruleNames =  [ "program", "version", "main_option", "definition_block", 
                   "definition_list", "pragma_definition", "custom_gate", 
                   "include_list", "include_definition", "public_list", 
                   "main_component", "function_definition", "template_definition", 
                   "identifier_list_option", "custom_option", "parallel_option", 
                   "block", "statement", "statement_list", "declaration_statement", 
                   "expression_statement", "substitutions", "substitutions_statement", 
                   "if_statement", "regular_statement", "for_statement", 
                   "while_statement", "equal_constraint_statement", "return_statement", 
                   "assert_statement", "log_statement", "declaration", "identifier_list", 
                   "tag_list", "tuple_initialization", "simple_symbol", 
                   "simple_symbol_list", "complex_symbol", "some_symbol", 
                   "some_symbol_list", "var_decl", "signal_decl", "signal_header", 
                   "signal_symbol", "signal_symbol_list", "component_decl", 
                   "var_access", "var_access_list", "array_access", "array_access_list", 
                   "component_access", "variable", "expression", "expression1", 
                   "expression2", "expression3", "expression4", "expression5", 
                   "expression6", "expression7", "expression8", "expression9", 
                   "expression10", "expression11", "expression12", "expression13", 
                   "expression14", "twoElemsListable", "log_arguement", 
                   "log_list", "listable", "listable_prime", "listableAnon", 
                   "listableAnon_prime", "listableWithInputNames", "prefixOpcode", 
                   "compareOpcode", "shiftOpcode", "add_sub_opcode", "mul_div_opcode", 
                   "assign_opcode" ]

    EOF = Token.EOF
    SIGNAL_TYPE=1
    LP=2
    RP=3
    LB=4
    RB=5
    LC=6
    RC=7
    SEMICOLON=8
    DOT=9
    COMMA=10
    UNDERSCORE=11
    TERNARY_CONDITION=12
    TERNARY_ALTERNATIVE=13
    EQ_CONSTRAINT=14
    LEFT_CONSTRAINT=15
    LEFT_ASSIGNMENT=16
    RIGHT_CONSTRAINT=17
    RIGHT_ASSIGNMENT=18
    SELF_OP=19
    NOT=20
    BNOT=21
    POW=22
    MUL=23
    DIV=24
    QUO=25
    MOD=26
    ADD=27
    SUB=28
    SHL=29
    SHR=30
    BAND=31
    BXOR=32
    BOR=33
    EQ=34
    NEQ=35
    GT=36
    LT=37
    LE=38
    GE=39
    AND=40
    OR=41
    ASSIGNMENT=42
    ASSIGNMENT_WITH_OP=43
    SIGNAL=44
    INPUT=45
    OUTPUT=46
    PUBLIC=47
    TEMPLATE=48
    COMPONENT=49
    VAR=50
    FUNCTION=51
    RETURN=52
    IF=53
    ELSE=54
    FOR=55
    WHILE=56
    DO=57
    LOG=58
    ASSERT=59
    INCLUDE=60
    PARALLEL=61
    PRAGMA=62
    BUS=63
    CIRCOM=64
    CUSTOM_TEMPLATES=65
    CUSTOM=66
    MAIN=67
    SINGLE_LINE_COMMENT=68
    MULTI_LINES_COMMENT=69
    STRING=70
    NUMBER=71
    HEXNUMBER=72
    IDENTIFIER=73
    WHITESPACE=74
    UnclosedComment=75

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include_list(self):
            return self.getTypedRuleContext(CircomParser.Include_listContext,0)


        def definition_list(self):
            return self.getTypedRuleContext(CircomParser.Definition_listContext,0)


        def main_option(self):
            return self.getTypedRuleContext(CircomParser.Main_optionContext,0)


        def EOF(self):
            return self.getToken(CircomParser.EOF, 0)

        def pragma_definition(self):
            return self.getTypedRuleContext(CircomParser.Pragma_definitionContext,0)


        def custom_gate(self):
            return self.getTypedRuleContext(CircomParser.Custom_gateContext,0)


        def getRuleIndex(self):
            return CircomParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CircomParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 162
                self.pragma_definition()


            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CircomParser.PRAGMA:
                self.state = 165
                self.custom_gate()


            self.state = 168
            self.include_list()
            self.state = 169
            self.definition_list()
            self.state = 170
            self.main_option()
            self.state = 171
            self.match(CircomParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(CircomParser.NUMBER)
            else:
                return self.getToken(CircomParser.NUMBER, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(CircomParser.DOT)
            else:
                return self.getToken(CircomParser.DOT, i)

        def getRuleIndex(self):
            return CircomParser.RULE_version

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersion" ):
                return visitor.visitVersion(self)
            else:
                return visitor.visitChildren(self)




    def version(self):

        localctx = CircomParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(CircomParser.NUMBER)
            self.state = 174
            self.match(CircomParser.DOT)
            self.state = 175
            self.match(CircomParser.NUMBER)
            self.state = 176
            self.match(CircomParser.DOT)
            self.state = 177
            self.match(CircomParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_optionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_component(self):
            return self.getTypedRuleContext(CircomParser.Main_componentContext,0)


        def getRuleIndex(self):
            return CircomParser.RULE_main_option

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_option" ):
                return visitor.visitMain_option(self)
            else:
                return visitor.visitChildren(self)




    def main_option(self):

        localctx = CircomParser.Main_optionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_main_option)
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CircomParser.COMPONENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.main_component()
                pass
            elif token in [CircomParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Definition_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_definition(self):
            return self.getTypedRuleContext(CircomParser.Function_definitionContext,0)


        def template_definition(self):
            return self.getTypedRuleContext(CircomParser.Template_definitionContext,0)


        def getRuleIndex(self):
            return CircomParser.RULE_definition_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition_block" ):
                return visitor.visitDefinition_block(self)
            else:
                return visitor.visitChildren(self)




    def definition_block(self):

        localctx = CircomParser.Definition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_definition_block)
        try:
            self.state = 185
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CircomParser.FUNCTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.function_definition()
                pass
            elif token in [CircomParser.TEMPLATE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.template_definition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Definition_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition_block(self):
            return self.getTypedRuleContext(CircomParser.Definition_blockContext,0)


        def definition_list(self):
            return self.getTypedRuleContext(CircomParser.Definition_listContext,0)


        def getRuleIndex(self):
            return CircomParser.RULE_definition_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition_list" ):
                return visitor.visitDefinition_list(self)
            else:
                return visitor.visitChildren(self)




    def definition_list(self):

        localctx = CircomParser.Definition_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_definition_list)
        try:
            self.state = 191
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CircomParser.TEMPLATE, CircomParser.FUNCTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.definition_block()
                self.state = 188
                self.definition_list()
                pass
            elif token in [CircomParser.EOF, CircomParser.COMPONENT]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pragma_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRAGMA(self):
            return self.getToken(CircomParser.PRAGMA, 0)

        def CIRCOM(self):
            return self.getToken(CircomParser.CIRCOM, 0)

        def version(self):
            return self.getTypedRuleContext(CircomParser.VersionContext,0)


        def SEMICOLON(self):
            return self.getToken(CircomParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CircomParser.RULE_pragma_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPragma_definition" ):
                return visitor.visitPragma_definition(self)
            else:
                return visitor.visitChildren(self)




    def pragma_definition(self):

        localctx = CircomParser.Pragma_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pragma_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(CircomParser.PRAGMA)
            self.state = 194
            self.match(CircomParser.CIRCOM)
            self.state = 195
            self.version()
            self.state = 196
            self.match(CircomParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Custom_gateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRAGMA(self):
            return self.getToken(CircomParser.PRAGMA, 0)

        def CUSTOM_TEMPLATES(self):
            return self.getToken(CircomParser.CUSTOM_TEMPLATES, 0)

        def SEMICOLON(self):
            return self.getToken(CircomParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CircomParser.RULE_custom_gate

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCustom_gate" ):
                return visitor.visitCustom_gate(self)
            else:
                return visitor.visitChildren(self)




    def custom_gate(self):

        localctx = CircomParser.Custom_gateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_custom_gate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.match(CircomParser.PRAGMA)
            self.state = 199
            self.match(CircomParser.CUSTOM_TEMPLATES)
            self.state = 200
            self.match(CircomParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Include_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include_definition(self):
            return self.getTypedRuleContext(CircomParser.Include_definitionContext,0)


        def include_list(self):
            return self.getTypedRuleContext(CircomParser.Include_listContext,0)


        def getRuleIndex(self):
            return CircomParser.RULE_include_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude_list" ):
                return visitor.visitInclude_list(self)
            else:
                return visitor.visitChildren(self)




    def include_list(self):

        localctx = CircomParser.Include_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_include_list)
        try:
            self.state = 206
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CircomParser.INCLUDE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 202
                self.include_definition()
                self.state = 203
                self.include_list()
                pass
            elif token in [CircomParser.EOF, CircomParser.TEMPLATE, CircomParser.COMPONENT, CircomParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Include_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(CircomParser.INCLUDE, 0)

        def STRING(self):
            return self.getToken(CircomParser.STRING, 0)

        def SEMICOLON(self):
            return self.getToken(CircomParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CircomParser.RULE_include_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude_definition" ):
                return visitor.visitInclude_definition(self)
            else:
                return visitor.visitChildren(self)




    def include_definition(self):

        localctx = CircomParser.Include_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_include_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 208
            self.match(CircomParser.INCLUDE)
            self.state = 209
            self.match(CircomParser.STRING)
            self.state = 210
            self.match(CircomParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Public_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LC(self):
            return self.getToken(CircomParser.LC, 0)

        def PUBLIC(self):
            return self.getToken(CircomParser.PUBLIC, 0)

        def LB(self):
            return self.getToken(CircomParser.LB, 0)

        def identifier_list(self):
            return self.getTypedRuleContext(CircomParser.Identifier_listContext,0)


        def RB(self):
            return self.getToken(CircomParser.RB, 0)

        def RC(self):
            return self.getToken(CircomParser.RC, 0)

        def getRuleIndex(self):
            return CircomParser.RULE_public_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPublic_list" ):
                return visitor.visitPublic_list(self)
            else:
                return visitor.visitChildren(self)




    def public_list(self):

        localctx = CircomParser.Public_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_public_list)
        try:
            self.state = 220
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CircomParser.LC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 212
                self.match(CircomParser.LC)
                self.state = 213
                self.match(CircomParser.PUBLIC)
                self.state = 214
                self.match(CircomParser.LB)
                self.state = 215
                self.identifier_list()
                self.state = 216
                self.match(CircomParser.RB)
                self.state = 217
                self.match(CircomParser.RC)
                pass
            elif token in [CircomParser.ASSIGNMENT]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_componentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMPONENT(self):
            return self.getToken(CircomParser.COMPONENT, 0)

        def MAIN(self):
            return self.getToken(CircomParser.MAIN, 0)

        def public_list(self):
            return self.getTypedRuleContext(CircomParser.Public_listContext,0)


        def ASSIGNMENT(self):
            return self.getToken(CircomParser.ASSIGNMENT, 0)

        def expression(self):
            return self.getTypedRuleContext(CircomParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(CircomParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CircomParser.RULE_main_component

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_component" ):
                return visitor.visitMain_component(self)
            else:
                return visitor.visitChildren(self)




    def main_component(self):
